--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ layout: default
 
 {% include projects.html %}
 
-{% include publications.html %}
+<!-- {% include publications.html %} -->
 
-<!-- {% include certifications.html %} -->
+{% include certifications.html %}
 
 {% include skills.html %}
